# SEGIMAP

./: .dockerignore  Dockerfile  README.md
.github/: dependabot.yml
.github/workflows/: docker.yml  main.yml
core/: Cargo.toml
core/src/: main.rs  message.rs
core/src/parser/grammar/: mod.rs
core/src/server/: config.rs  lmtp.rs
core/src/server/user/: auth.rs  email.rs
mime/: Cargo.toml
mime/src/: lib.rs
