[package]
authors = []
edition = "2018"
name = "segimap"
version = "0.0.1"

[[bin]]
name = "segimap"
path = "src/main.rs"

[dependencies]
bufstream = "*"
env_logger = "*"
log = "*"
nom = "*"
num = "*"
openssl = "0.10"
rand = "*"
regex = "*"
rust-crypto = "*"
segimap_mime = {path = "../mime/"}
serde = "*"
serde_derive = "*"
serde_json = "*"
thiserror = "1.0"
time = "*"
toml = "*"
walkdir = "*"
