[package]
authors = []
edition = "2018"
name = "segimap"
version = "0.0.1"

[[bin]]
name = "segimap"
path = "src/main.rs"

[dependencies]
bufstream = "0.1.4"
env_logger = "0.9.0"
log = "0.4.14"
nom = "3.2.1"
num = "0.4.0"
openssl = "0.10.38"
rand = "0.5.6"
regex = "1.5.4"
rust-crypto = "0.2.36"
segimap_mime = {path = "../mime/"}
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.72"
thiserror = "1.0"
time = "0.1.44"
toml = "0.5.8"
walkdir = "2.3.2"
